--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,13 +2,16 @@
 
 @font-face {
     font-family: 'Inter Variable';
-    src: url('./Inter-Variable.woff2') format('woff2-variations');
+    src: 
+        url('./Inter-Variable.woff2') format('woff2-variations'),
+        url('./Inter-Variable.woff2') format('woff2');
     font-weight: 400 700;
+    font-variation-settings: 'wght' 400;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Press Start 2P';
-    src: url('./PressStart2P-Regular.woff') format('woff2');
+    src: url('./PressStart2P-Regular.woff') format('woff');
     font-weight: 400;
 }
