--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,7 @@
   height: 100%;
   position: relative;
   object-fit: cover; 
-  object-position: center;=
+  object-position: center;
   border-top: solid 2px black;
   border-bottom: solid 2px black;
 }
